# OmniMem

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.agents/: ledger.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  test.yml
omnimem/: api.py  append_rules.py  celery_app.py  cli.py  concept_extractor.py  exceptions.py  extracted_concepts.json  handbook_ingest.py  implementation_plan.md  ingest_real_knowledge.py  ipc_wal.py  local_ingest.py  memory_router.py  mock_deps.py  models.py  neo4j_layer.py  neo4j_mapping.py  pgvector_layer.py  pipeline.py  redis_bus.py  schemas.py  security_contract.py  skill_ingest.py  sml_adapter.py  tasks.py  wal.py  web_distiller.py  wiki_ingest.py
omnimem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
omnimem/core/: celery_app.py  config.py
omnimem/workers/: tasks.py
tests/: test_db_search.py  test_dist.py  test_e2e_validation.py  test_memory_router.py  test_neo4j_mapping.py  test_pgvector_layer.py  test_pipeline.py  test_redis_bus.py  test_search.py  test_search_dist.py  test_security.py  test_sml_adapter.py  test_wal.py
